// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render with skin link 1`] = `
<button
  class="button link"
  type="button"
>
  <span
    class="text"
  />
</button>
`;

exports[`Should render with skin primary 1`] = `
<button
  class="button primary"
  type="button"
>
  <span
    class="text"
  />
</button>
`;

exports[`Should render with skin secondary 1`] = `
<button
  class="button secondary"
  type="button"
>
  <span
    class="text"
  />
</button>
`;

exports[`should render disabled with skin secondary 1`] = `
<button
  class="button secondary"
  disabled=""
  type="button"
>
  <span
    class="text"
  />
</button>
`;
